--- a/MyWeb/resource/message.css
+++ b/MyWeb/resource/message.css
@@ -6,7 +6,7 @@
 .message {
     width: 800px;
     height: 600px;
-    background-color: #ddd;
+    background-color: #fff;
     overflow: auto;
 }
 
